# LeagueLobby

./: .gitignore  main.py  pyproject.toml
cogs/: lobby.py
core/: Requests.py  __init__.py
