[tool.poetry]
name = "leaguelobby"
version = "0.1.0"
description = ""
authors = ["Nemika__ <mmnemijus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
disnake = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
